bulk cohort creation working locally after broad refactors of DataLoader etc